# my-botty

./: .env.example  .gitignore  ARCHITECTURE.md  IMPROVEMENTS.md  README.md  STEALTH.md  asset_extractor.py  asset_manager.py  blizzpw.txt  build.py  check_dependencies.bat  cookies.txt  desktop_snap.py  development.md  environment.yml  find_python.bat  install.bat  pyproject.toml  pytest.ini  quest_debug.py  quest_plan.md  quest_screenshot_tool.py  requirements.txt  ruff.toml  run.bat  run_asset_extractor.bat  run_botty.bat  run_quest_debug.bat  screenshot_tool.py  test_plan.md  update.bat
assets/: NTItemAlias.dbl  d2r_settings.json
config/: custom.ini.example  daily_prices.json  daily_prices_history.json  default.bnip  fg_daily_estimates.json  fg_day_estimates.json  fg_prices.db  fg_prices.json  game.ini  params.ini  shop.ini  traderie_history.json  traderie_prices.json
data/: d2jsp_topic_urls.txt
docs/: adding_routes.md  auto_build_plan.md  bnip_guide.md  d2jsp_scraping_guide.md  fg_market_scraper.md  hermes_qwen_takeover.md  linux_port_plan.md  run_cows_plan.md
references/: improvements.md
src/: _dll_fix.py  bot.py  chest.py  config.py  death_manager.py  fg_price_tracker.py  game_controller.py  game_recovery.py  game_stats.py  gem_transmute.py  health_manager.py  logger.py  main.py  npc_manager.py  pather.py  screen.py  shopper.py  target_detect.py  template_finder.py  ui_manager.py
test/: test_discord_embeds.py  test_key_detector.py  test_setup_bat_files.py  test_skill_preflight.py
test_imports.py/: parameter
tools/: _codemod.py  analyze_fg_noise.py  (+23 more)
(+140 files in other folders)
